@@ -1,3 +1,6 @@
+[B]2.2.4[/B]
+. Fix Minimize option save.
+
 [B]2.2.3[/B]
 . Fix Sega Genesis 32X scrapers references
 
